log
Sat, Mar 22, 2025  8:58:48 PM: 
In file included from test.c:5:0:
exercises.c: In function 'main':
exercises.c:149:10: error: unused variable 'lista' [-Werror=unused-variable]
    List *lista = crea_lista();
          ^~~~~
test.c: At top level:
test.c:253:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:147:5: note: previous definition of 'main' was here
 int main()
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
81d57fe
Sat, Mar 22, 2025  9:00:56 PM: 
 exercises.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  4|1
total_score: 50/70
1ba30d6
